Fix header spacing

--- a/app/assets/stylesheets/recruitments.scss
+++ b/app/assets/stylesheets/recruitments.scss
@@ -2,7 +2,7 @@ $step-width: 170px;
 $step-height: 120px;
 
 .position-data h2 {
-  margin-top: 5px;
+  margin-top: 10px;
 
   &:before {
     position: absolute;
